# go-genproto

./: .gitignore  BUILD.bazel  WORKSPACE  deps.bzl
firestore/bundle/: BUILD.bazel
googleapis/actions/sdk/v2/: BUILD.bazel
googleapis/analytics/admin/v1alpha/: BUILD.bazel
googleapis/analytics/data/v1alpha/: BUILD.bazel
googleapis/analytics/data/v1beta/: BUILD.bazel
googleapis/analytics/management/v1alpha/: BUILD.bazel
googleapis/api/: BUILD.bazel
googleapis/api/annotations/: BUILD.bazel
googleapis/api/configchange/: BUILD.bazel
googleapis/api/distribution/: BUILD.bazel
googleapis/api/error_reason/: BUILD.bazel
googleapis/api/expr/conformance/v1alpha1/: BUILD.bazel
googleapis/api/expr/v1alpha1/: BUILD.bazel
googleapis/api/expr/v1beta1/: BUILD.bazel
googleapis/api/httpbody/: BUILD.bazel
googleapis/api/label/: BUILD.bazel
googleapis/api/metric/: BUILD.bazel
googleapis/api/monitoredres/: BUILD.bazel
googleapis/api/serviceconfig/: BUILD.bazel
googleapis/api/servicecontrol/v1/: BUILD.bazel
googleapis/api/servicemanagement/v1/: BUILD.bazel
googleapis/api/serviceusage/v1/: BUILD.bazel
googleapis/api/serviceusage/v1beta1/: BUILD.bazel
googleapis/api/visibility/: BUILD.bazel
googleapis/appengine/legacy/: BUILD.bazel
googleapis/appengine/logging/v1/: BUILD.bazel
googleapis/appengine/v1/: BUILD.bazel
googleapis/appengine/v1beta/: BUILD.bazel
googleapis/apps/alertcenter/v1beta1/: BUILD.bazel
googleapis/apps/script/type/: BUILD.bazel
googleapis/area120/tables/v1alpha1/: BUILD.bazel
googleapis/assistant/embedded/v1alpha1/: BUILD.bazel
googleapis/assistant/embedded/v1alpha2/: BUILD.bazel
googleapis/bigtable/admin/v2/: BUILD.bazel
googleapis/bigtable/v1/: BUILD.bazel
googleapis/bigtable/v2/: BUILD.bazel
googleapis/bytestream/: BUILD.bazel
googleapis/chromeos/moblab/v1beta1/: BUILD.bazel
googleapis/cloud/accessapproval/v1/: BUILD.bazel
googleapis/cloud/aiplatform/logging/: BUILD.bazel
googleapis/cloud/aiplatform/v1/: BUILD.bazel
googleapis/cloud/aiplatform/v1beta1/: BUILD.bazel
googleapis/cloud/apigateway/v1/: BUILD.bazel
googleapis/cloud/apigeeconnect/v1/: BUILD.bazel
googleapis/cloud/asset/v1/: BUILD.bazel
googleapis/cloud/asset/v1p1beta1/: BUILD.bazel
googleapis/cloud/asset/v1p2beta1/: BUILD.bazel
googleapis/cloud/asset/v1p4beta1/: BUILD.bazel
googleapis/cloud/asset/v1p5beta1/: BUILD.bazel
googleapis/cloud/asset/v1p7beta1/: BUILD.bazel
googleapis/cloud/assuredworkloads/v1/: BUILD.bazel
googleapis/cloud/assuredworkloads/v1beta1/: BUILD.bazel
googleapis/cloud/audit/: BUILD.bazel
googleapis/cloud/automl/v1/: BUILD.bazel
googleapis/cloud/automl/v1beta1/: BUILD.bazel
googleapis/cloud/bigquery/v2/: BUILD.bazel
googleapis/cloud/billing/v1/: BUILD.bazel
googleapis/cloud/binaryauthorization/v1/: BUILD.bazel
googleapis/cloud/binaryauthorization/v1beta1/: BUILD.bazel
googleapis/cloud/channel/v1/: BUILD.bazel
googleapis/cloud/clouddms/v1/: BUILD.bazel
googleapis/cloud/common/: BUILD.bazel
googleapis/cloud/compute/v1/: BUILD.bazel
googleapis/cloud/contactcenterinsights/v1/: BUILD.bazel
googleapis/cloud/datacatalog/v1/: BUILD.bazel
googleapis/cloud/datacatalog/v1beta1/: BUILD.bazel
googleapis/cloud/datafusion/v1/: BUILD.bazel
googleapis/cloud/datafusion/v1beta1/: BUILD.bazel
googleapis/cloud/datalabeling/v1beta1/: BUILD.bazel
googleapis/cloud/dataproc/logging/: BUILD.bazel
googleapis/cloud/dataproc/v1/: BUILD.bazel
googleapis/cloud/dataproc/v1beta2/: BUILD.bazel
googleapis/cloud/dataqna/v1alpha/: BUILD.bazel
googleapis/cloud/datastream/v1alpha1/: BUILD.bazel
googleapis/cloud/deploy/v1/: BUILD.bazel
googleapis/cloud/dialogflow/v2/: BUILD.bazel
googleapis/cloud/dialogflow/v2beta1/: BUILD.bazel
googleapis/cloud/documentai/v1/: BUILD.bazel
googleapis/cloud/documentai/v1beta1/: BUILD.bazel
googleapis/cloud/documentai/v1beta2/: BUILD.bazel
googleapis/cloud/documentai/v1beta3/: BUILD.bazel
googleapis/cloud/domains/v1/: BUILD.bazel
googleapis/cloud/extendedops/: BUILD.bazel
googleapis/cloud/location/: BUILD.bazel
googleapis/container/v1/: BUILD.bazel
googleapis/container/v1alpha1/: BUILD.bazel
googleapis/container/v1beta1/: BUILD.bazel
googleapis/dataflow/v1beta3/: BUILD.bazel
googleapis/datastore/v1/: BUILD.bazel
googleapis/datastore/v1beta3/: BUILD.bazel
googleapis/firestore/v1/: BUILD.bazel
googleapis/firestore/v1beta1/: BUILD.bazel
googleapis/gapic/metadata/: BUILD.bazel
googleapis/genomics/v1/: BUILD.bazel
googleapis/genomics/v1alpha2/: BUILD.bazel
googleapis/grafeas/v1/: BUILD.bazel
googleapis/iam/v1/: BUILD.bazel
googleapis/iam/v1beta/: BUILD.bazel
googleapis/logging/type/: BUILD.bazel
googleapis/logging/v2/: BUILD.bazel
googleapis/longrunning/: BUILD.bazel
googleapis/maps/unity/: BUILD.bazel
googleapis/monitoring/v3/: BUILD.bazel
googleapis/pubsub/v1/: BUILD.bazel
googleapis/pubsub/v1beta2/: BUILD.bazel
googleapis/rpc/code/: BUILD.bazel
googleapis/rpc/errdetails/: BUILD.bazel
googleapis/rpc/status/: BUILD.bazel
googleapis/spanner/v1/: BUILD.bazel
googleapis/storage/v1/: BUILD.bazel
googleapis/storage/v2/: BUILD.bazel
googleapis/storagetransfer/v1/: BUILD.bazel
googleapis/type/calendarperiod/: BUILD.bazel
googleapis/type/color/: BUILD.bazel
googleapis/type/date/: BUILD.bazel
googleapis/type/date_range/: BUILD.bazel
googleapis/type/date_time_range/: BUILD.bazel
googleapis/type/datetime/: BUILD.bazel
googleapis/type/dayofweek/: BUILD.bazel
googleapis/type/decimal/: BUILD.bazel
googleapis/type/expr/: BUILD.bazel
googleapis/type/fraction/: BUILD.bazel
googleapis/type/interval/: BUILD.bazel
googleapis/type/latlng/: BUILD.bazel
googleapis/type/localized_text/: BUILD.bazel
googleapis/type/money/: BUILD.bazel
googleapis/type/month/: BUILD.bazel
googleapis/type/phone_number/: BUILD.bazel
googleapis/type/postaladdress/: BUILD.bazel
googleapis/type/quaternion/: BUILD.bazel
googleapis/type/timeofday/: BUILD.bazel
googleapis/watcher/v1/: BUILD.bazel
(+259 files in other folders)
