load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "error_reason",
    srcs = ["error_reason.pb.go"],
    importpath = "google.golang.org/genproto/googleapis/api/error_reason",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)
