load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "monitoredres",
    srcs = ["monitored_resource.pb.go"],
    importpath = "google.golang.org/genproto/googleapis/api/monitoredres",
    visibility = ["//visibility:public"],
    deps = [
        "//googleapis/api",
        "//googleapis/api/label",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/known/structpb",
    ],
)
