load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "legacy",
    srcs = ["audit_data.pb.go"],
    importpath = "google.golang.org/genproto/googleapis/appengine/legacy",
    visibility = ["//visibility:public"],
    deps = [
        "//googleapis/api/annotations",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)
