load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "audit",
    srcs = [
        "audit_log.pb.go",
        "bigquery_audit_metadata.pb.go",
    ],
    importpath = "google.golang.org/genproto/googleapis/cloud/audit",
    visibility = ["//visibility:public"],
    deps = [
        "//googleapis/iam/v1:iam",
        "//googleapis/rpc/context/attribute_context",
        "//googleapis/rpc/status",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/known/anypb",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_google_protobuf//types/known/structpb",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
