load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "extendedops",
    srcs = ["extended_operations.pb.go"],
    importpath = "google.golang.org/genproto/googleapis/cloud/extendedops",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/descriptorpb",
    ],
)
