load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "v1beta3",
    srcs = [
        "environment.pb.go",
        "jobs.pb.go",
        "messages.pb.go",
        "metrics.pb.go",
        "snapshots.pb.go",
        "streaming.pb.go",
        "templates.pb.go",
    ],
    importpath = "google.golang.org/genproto/googleapis/dataflow/v1beta3",
    visibility = ["//visibility:public"],
    deps = [
        "//googleapis/api/annotations",
        "//googleapis/rpc/status",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/known/anypb",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_google_protobuf//types/known/structpb",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
