load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "genomics",
    srcs = [
        "annotations.pb.go",
        "cigar.pb.go",
        "datasets.pb.go",
        "operations.pb.go",
        "position.pb.go",
        "range.pb.go",
        "readalignment.pb.go",
        "readgroup.pb.go",
        "readgroupset.pb.go",
        "reads.pb.go",
        "references.pb.go",
        "variants.pb.go",
    ],
    importpath = "google.golang.org/genproto/googleapis/genomics/v1",
    visibility = ["//visibility:public"],
    deps = [
        "//googleapis/api/annotations",
        "//googleapis/iam/v1:iam",
        "//googleapis/longrunning",
        "//googleapis/rpc/status",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/known/anypb",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_golang_google_protobuf//types/known/fieldmaskpb",
        "@org_golang_google_protobuf//types/known/structpb",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_golang_google_protobuf//types/known/wrapperspb",
    ],
)
