load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "grafeas",
    srcs = [
        "attestation.pb.go",
        "build.pb.go",
        "common.pb.go",
        "cvss.pb.go",
        "deployment.pb.go",
        "discovery.pb.go",
        "grafeas.pb.go",
        "image.pb.go",
        "package.pb.go",
        "provenance.pb.go",
        "vulnerability.pb.go",
    ],
    importpath = "google.golang.org/genproto/googleapis/grafeas/v1",
    visibility = ["//visibility:public"],
    deps = [
        "//googleapis/api/annotations",
        "//googleapis/rpc/status",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
        "@io_bazel_rules_go//proto/wkt:field_mask_go_proto",
        "@io_bazel_rules_go//proto/wkt:timestamp_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
