load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "type",
    srcs = [
        "http_request.pb.go",
        "log_severity.pb.go",
    ],
    importpath = "google.golang.org/genproto/googleapis/logging/type",
    visibility = ["//visibility:public"],
    deps = [
        "//googleapis/api/annotations",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/known/durationpb",
    ],
)
