load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "logging",
    srcs = [
        "log_entry.pb.go",
        "logging.pb.go",
        "logging_config.pb.go",
        "logging_metrics.pb.go",
    ],
    importpath = "google.golang.org/genproto/googleapis/logging/v2",
    visibility = ["//visibility:public"],
    deps = [
        "//googleapis/api/annotations",
        "//googleapis/api/distribution",
        "//googleapis/api/metric",
        "//googleapis/api/monitoredres",
        "//googleapis/logging/type",
        "//googleapis/rpc/status",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/known/anypb",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_golang_google_protobuf//types/known/fieldmaskpb",
        "@org_golang_google_protobuf//types/known/structpb",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
