load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "unity",
    srcs = ["clientinfo.pb.go"],
    importpath = "google.golang.org/genproto/googleapis/maps/unity",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)
