load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "monitoring",
    srcs = [
        "alert.pb.go",
        "alert_service.pb.go",
        "common.pb.go",
        "dropped_labels.pb.go",
        "group.pb.go",
        "group_service.pb.go",
        "metric.pb.go",
        "metric_service.pb.go",
        "mutation_record.pb.go",
        "notification.pb.go",
        "notification_service.pb.go",
        "query_service.pb.go",
        "service.pb.go",
        "service_service.pb.go",
        "span_context.pb.go",
        "uptime.pb.go",
        "uptime_service.pb.go",
    ],
    importpath = "google.golang.org/genproto/googleapis/monitoring/v3",
    visibility = ["//visibility:public"],
    deps = [
        "//googleapis/api",
        "//googleapis/api/annotations",
        "//googleapis/api/distribution",
        "//googleapis/api/label",
        "//googleapis/api/metric",
        "//googleapis/api/monitoredres",
        "//googleapis/longrunning",
        "//googleapis/rpc/status",
        "//googleapis/type/calendarperiod",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_golang_google_protobuf//types/known/fieldmaskpb",
        "@org_golang_google_protobuf//types/known/structpb",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_golang_google_protobuf//types/known/wrapperspb",
    ],
)
