load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "pubsub",
    srcs = [
        "pubsub.pb.go",
        "schema.pb.go",
    ],
    importpath = "google.golang.org/genproto/googleapis/pubsub/v1",
    visibility = ["//visibility:public"],
    deps = [
        "//googleapis/api/annotations",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_golang_google_protobuf//types/known/fieldmaskpb",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
