load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "code",
    srcs = ["code.pb.go"],
    importpath = "google.golang.org/genproto/googleapis/rpc/code",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)
