load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "errdetails",
    srcs = ["error_details.pb.go"],
    importpath = "google.golang.org/genproto/googleapis/rpc/errdetails",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/known/durationpb",
    ],
)
