load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "spanner",
    srcs = [
        "commit_response.pb.go",
        "keys.pb.go",
        "mutation.pb.go",
        "query_plan.pb.go",
        "result_set.pb.go",
        "spanner.pb.go",
        "transaction.pb.go",
        "type.pb.go",
    ],
    importpath = "google.golang.org/genproto/googleapis/spanner/v1",
    visibility = ["//visibility:public"],
    deps = [
        "//googleapis/api/annotations",
        "//googleapis/rpc/status",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_golang_google_protobuf//types/known/structpb",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
