load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "storagetransfer",
    srcs = [
        "transfer.pb.go",
        "transfer_types.pb.go",
    ],
    importpath = "google.golang.org/genproto/googleapis/storagetransfer/v1",
    visibility = ["//visibility:public"],
    deps = [
        "//googleapis/api/annotations",
        "//googleapis/longrunning",
        "//googleapis/rpc/code",
        "//googleapis/type/date",
        "//googleapis/type/timeofday",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/known/anypb",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_golang_google_protobuf//types/known/fieldmaskpb",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
