load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "date_time_range",
    srcs = ["datetime_range.pb.go"],
    importpath = "google.golang.org/genproto/googleapis/type/date_time_range",
    visibility = ["//visibility:public"],
    deps = [
        "//googleapis/type/datetime",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)
